Primer documento argentina programa

--- a/html/index.html
+++ b/html/index.html
@@ -24,11 +24,18 @@
 </head>
 <body>
     <header id="cabecera">
-        <img src="https://randomuser.me/api/portraits/men/39.jpg"/>
         <h1>Curriculum Vitae</h1>
+        <div class="card" style="width: 18rem;">
+            <img src="https://randomuser.me/api/portraits/men/39.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Presentación</h5>
+              <p class="card-text">Hola soy Kal Zon Tengo 30 años, actualmente trabajo e intento enfrentar nuevos desafios.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+
     </header>
     <nav id="visitar_web">
-        https://www.linkedin.com/feed/
     </nav>
     <section>
         <h2>Datos Personales</h2>
