este commit es a prueba de organizar el header

--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/estilos.css">
     <title>Curriculun Vitae</title>
     <link rel="icon" type="image/x-icon" href="https://img.icons8.com/external-kiranshastry-gradient-kiranshastry/2x/external-curriculum-management-kiranshastry-gradient-kiranshastry-7.png">
-    <meta name="twitter:card" content="summary">
+    <meta nagitme="twitter:card" content="summary">
     <meta name="twitter:site" content="@publisher_handle">
     <meta name="twitter:title" content="Titulo de la pagina">
     <meta name="twitter:description" content="Esta pagina esta orientada a la busqueda laboral">
@@ -21,23 +21,24 @@
     <meta property="og:image" content=" http://example.com/image.jpg" />
     <meta prop erty="og:description" content="Estos metodos de posicionamiento pueden ser muy utiles para una mejor busqueda laboral." />
     <meta property="og:site_name" content="Nombre de la web, i.e. Moz" /meta property="fb:admins" content="ID de Facebook" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@200&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header id="cabecera">
         <h1>Curriculum Vitae</h1>
-        <div class="card" style="width: 18rem;">
-            <img src="https://randomuser.me/api/portraits/men/39.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Presentación</h5>
+        <div class="card">            
+            <div class="carta_presentacion">
+              <h5>Presentación</h5>
+              <img src="https://randomuser.me/api/portraits/men/39.jpg">
               <p class="card-text">Hola soy Kal Zon Tengo 30 años, actualmente trabajo e intento enfrentar nuevos desafios.</p>
               <a href="www.google.com.ar" class="btn btn-primary">Go somewhere</a>
             </div>
-          </div>
-
+        </div>
     </header>
-    <nav id="visitar_web">
-    </nav>
-    <section>
+        <section>
         <h2>Datos Personales</h2>
         <ul class="list-style">
             <li>This is a list.</li>
