intentando posicionar la imagen del lado derecho

--- a/html/index.html
+++ b/html/index.html
@@ -23,18 +23,20 @@
     <meta property="og:site_name" content="Nombre de la web, i.e. Moz" /meta property="fb:admins" content="ID de Facebook" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@200&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@200&display=swap">
 
 </head>
 <body>
     <header id="cabecera">
         <h1>Curriculum Vitae</h1>
-        <div class="card">            
+        <div>
+            <img src="https://randomuser.me/api/portraits/men/39.jpg" id="foto4x4">
+        </div>
+        <div class="">            
             <div class="carta_presentacion">
               <h5>Presentación</h5>
-              <img src="https://randomuser.me/api/portraits/men/39.jpg">
-              <p class="card-text">Hola soy Kal Zon Tengo 30 años, actualmente trabajo e intento enfrentar nuevos desafios.</p>
-              <a href="www.google.com.ar" class="btn btn-primary">Go somewhere</a>
+              
+              <p class="carta_presentacion">Hola soy Kal Zon Tengo 30 años, actualmente trabajo e intento enfrentar nuevos desafios.</p>
             </div>
         </div>
     </header>
