organizando cabecera y presentacion inicial

--- a/html/index.html
+++ b/html/index.html
@@ -28,21 +28,19 @@
 </head>
 <body>
     <header id="cabecera">
-        <h1>Curriculum Vitae</h1>
+        <h1 id="curriculum">Curriculum Vitae</h1>
         <div>
             <img src="https://randomuser.me/api/portraits/men/39.jpg" id="foto4x4">
         </div>
         <div class="">            
-            <div class="carta_presentacion">
-              <h5>Presentación</h5>
-              
-              <p class="carta_presentacion">Hola soy Kal Zon Tengo 30 años, actualmente trabajo e intento enfrentar nuevos desafios.</p>
+            <div class="carta_presentacion">           
+              <p class="epigrafe">Hola soy Kal Zon Tengo 30 años, actualmente trabajo e intento enfrentar nuevos desafios. Me gustan las tareas de logica, soy bueno para las matemáticas y problemas a resolver</p>
             </div>
         </div>
     </header>
-        <section>
+        <section id="info_primaria">
         <h2>Datos Personales</h2>
-        <ul class="list-style">
+        <ul class="escrito">
             <li>This is a list.</li>
             <li>It appears completely unstyled.</li>
             <li>Structurally, it's still a list.</li>
@@ -50,9 +48,9 @@
             <li>Nested lists:</li>
         </ul>    
     </section>
-    <article id="Estudios_adquiridos">
+    <article class="Estudios_adquiridos">
         <h2>Estudios</h2>
-        <ul>
+        <ul class="estudios">
             <li>Nombre y A pellido</li>
             <li>Edad</li>
             <li>fecha de nacimiento</li>
@@ -64,7 +62,7 @@
     </article>
     <aside id="Trabajos">
         <h2>Experiencia laboral</h2>
-        <ul>
+        <ul class="">
             <li>Nombre y A pellido</li>
             <li>Edad</li>
             <li>fecha de nacimiento</li>
