Avanzando con css organizando alineando semanticamente para que el Responsive sea coherente

--- a/html/index.html
+++ b/html/index.html
@@ -26,15 +26,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@200&display=swap">
 
 </head>
-<body>
-    <header id="cabecera">
-        <h1 id="curriculum">Curriculum Vitae</h1>
+<body id="cuerpoentero">
+    <header id="partesuperior">
         <div>
-            <img src="https://randomuser.me/api/portraits/men/39.jpg" id="foto4x4">
+            <h1 id="curriculum">Curriculum Vitae</h1>
         </div>
         <div class="">            
-            <div class="carta_presentacion">           
-              <p class="epigrafe">Hola soy Kal Zon Tengo 30 años, actualmente trabajo e intento enfrentar nuevos desafios. Me gustan las tareas de logica, soy bueno para las matemáticas y problemas a resolver</p>
+            <div class="epigrafe">           
+              <p class="textoepigrafe">Hola soy Kal Zon Tengo 30 años, actualmente trabajo e intento enfrentar nuevos desafios. Me gustan las tareas de logica, soy bueno para las matemáticas y problemas a resolver</p>
+            </div>
+            <div>
+               <img src="https://randomuser.me/api/portraits/men/39.jpg" id="foto4x4">
             </div>
         </div>
     </header>
