--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/estilos.css">
+    <link rel="stylesheet" type="text/css" href="css/responsive.css">
     <title>Curriculun Vitae</title>
     <link rel="icon" type="image/x-icon" href="https://img.icons8.com/external-kiranshastry-gradient-kiranshastry/2x/external-curriculum-management-kiranshastry-gradient-kiranshastry-7.png">
     <meta nagitme="twitter:card" content="summary">
@@ -24,30 +26,36 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@200&display=swap">
+    <!--boostrap css-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <!--boostrap javascript-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+
+
 
 </head>
 <body id="cuerpoentero">
     <header id="partesuperior">
-        <div>
-            <h1 id="curriculum">Curriculum Vitae</h1>
+        <div class="tituloepigrafe">
+            <h1>Curriculum Vitae</h1>
         </div>
-        <div class="">            
-            <div class="epigrafe">           
-              <p class="textoepigrafe">Hola soy Kal Zon Tengo 30 años, actualmente trabajo e intento enfrentar nuevos desafios. Me gustan las tareas de logica, soy bueno para las matemáticas y problemas a resolver</p>
-            </div>
-            <div>
-               <img src="https://randomuser.me/api/portraits/men/39.jpg" id="foto4x4">
-            </div>
+        <div class="imgytxt">
+            <img src="https://randomuser.me/api/portraits/men/39.jpg">
+            <p class="escriturapres">Hola soy Kal Zon Tengo 30 años, actualmente trabajo e intento enfrentar nuevos desafios. Me gustan las tareas de logica, soy bueno para las matemáticas y problemas a resolver. Me gusta la actividad física y los buenos hábitos.</p>
+
         </div>
     </header>
-        <section id="info_primaria">
+    <nav></nav>
+    <section id="info_primaria">
         <h2>Datos Personales</h2>
         <ul class="escrito">
-            <li>This is a list.</li>
-            <li>It appears completely unstyled.</li>
-            <li>Structurally, it's still a list.</li>
-            <li>However, this style only applies to immediate child elements.</li>
-            <li>Nested lists:</li>
+            <li>Nombre: Kal</li>
+            <li>apellido: Zon</li>
+            <li>Edad: 30</li>
+            <li>fecha de nacimiento: 01/02/1993</li>
+            <li>Lugar de nacimiento: San salvador de Jujuy</li>
+            <li>Nacionalidad: ARgentina</li>
+            <li>e-mail: Kalzoncillo93@gmail.com</li>
         </ul>    
     </section>
     <article class="Estudios_adquiridos">
