tareas finalizadas de proyecto

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/estilos.css">
-    <link rel="stylesheet" type="text/css" href="css/responsive.css">
     <title>Curriculun Vitae</title>
     <link rel="icon" type="image/x-icon" href="https://img.icons8.com/external-kiranshastry-gradient-kiranshastry/2x/external-curriculum-management-kiranshastry-gradient-kiranshastry-7.png">
     <meta nagitme="twitter:card" content="summary">
@@ -45,45 +44,37 @@
 
         </div>
     </header>
-    <nav></nav>
     <section id="info_primaria">
-        <h2>Datos Personales</h2>
-        <ul class="escrito">
+        <h2 class="subtitulos">Datos Personales</h2>
+        <ul class="infopersonal">
             <li>Nombre: Kal</li>
             <li>apellido: Zon</li>
             <li>Edad: 30</li>
             <li>fecha de nacimiento: 01/02/1993</li>
             <li>Lugar de nacimiento: San salvador de Jujuy</li>
-            <li>Nacionalidad: ARgentina</li>
+            <li>Nacionalidad: Argentina</li>
             <li>e-mail: Kalzoncillo93@gmail.com</li>
         </ul>    
     </section>
     <article class="Estudios_adquiridos">
-        <h2>Estudios</h2>
-        <ul class="estudios">
-            <li>Nombre y A pellido</li>
-            <li>Edad</li>
-            <li>fecha de nacimiento</li>
-            <li>D.N.I.</li>
-            <li>Telefono</li>
-            <li>Direccion</li>
-            <li>mail</li>
-        </ul> 
+        <h2 class="estudios">Estudios</h2>        
+        <ul>
+            <li>Curso online Como Programar para Emprendedores  HTML y CSS.</li>
+            <li>Curso online de JavaScrpit – Start Developing Applications.</li>
+            <li>Curso Online Wordpress – Udemy</li>
+        </ul>
     </article>
     <aside id="Trabajos">
-        <h2>Experiencia laboral</h2>
+        <h2 class="mistrabajos">Experiencia laboral</h2>
         <ul class="">
-            <li>Nombre y A pellido</li>
-            <li>Edad</li>
-            <li>fecha de nacimiento</li>
-            <li>D.N.I.</li>
-            <li>Telefono</li>
-            <li>Direccion</li>
-            <li>mail</li>
+            <li></li>
+            <li>Todo rico. Las Heras y boulevard. 45523533 - 2013-20514 – Atención al Cliente</li>
+            <li>Metro Urbano. Iturraspe 3926. Alejo Sala. Arquitecto. 342 42555264 / 45390155 – Atención al Cliente, Gestión de Documentos, Depósitos Bancarios, Transferencias.</li>
         </ul> 
     </aside>
     <footer>
-        <h2>
+
+        <h2 class="experiencia">
             Experiencia adicional
         </h2>
         <ul>
